# c_fsm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
doc/: doc.md  fsm_keyword.plantuml
include/fsm/: fsm.h
source/: fsm.c
test/: CMakeLists.txt
test/fsm_definition/: fsm_elevator.c  fsm_elevator.h  fsm_on_off.c  fsm_on_off.h
test/suites/: test_fsm.cpp  test_fsm_action.cpp  test_fsm_guard.cpp  test_fsm_null.cpp
